syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mhersimonyan2003/otus_go_home_work/hw12_13_14_15_calendar/api;api";

message Event {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp start_time = 3;
    google.protobuf.Timestamp end_time = 4;
    string details = 5;
}